--- a/src/styles/base.less
+++ b/src/styles/base.less
@@ -9,4 +9,6 @@
   --black: #323233;
   --descColor: #606061;
   --borderColor: #EBECF0;
+  --task-tline-stroke-width: 4px;
+  --task-node-height: 40px;
 }
